--- a/index.html
+++ b/index.html
@@ -7,35 +7,37 @@
     </head>
     <body class="bg-gray-100">
         <div class="container mx-auto p-5">
-            <h1 class="text-5xl font-bold text-center text-amber-500 mb-10">Pokedex</h1>
+            <h1 class="text-6xl font-bold text-center text-amber-500 mb-10">Pokedex</h1>
 
             <!-- Search -->
             <div class="mb-5">
-                <input type="text" id="search-input" placeholder="Search Pokemon" class="border p-2 rounded w-full">
+                <input type="text" id="search-input" placeholder="Search Pokemon" class="border-2 border-gray-300 p-3 rounded-lg w-full shadow-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
             </div>
 
             <!-- Pokemon List -->
-            <div id="pokemon-list" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+            <div id="pokemon-list" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
                 <!-- Pokemon items will be dynamically added here -->
             </div>
 
             <!-- Page Control -->
             <div id="page-control" class="flex justify-center mt-10 space-x-4">
-                <button id="prev-btn" class="bg-blue-500 text-white p-2 rounded" disabled>Previous</button>
-                <span id="page-number" class="text-xl"></span>
-                <button id="next-btn" class="bg-blue-500 text-white p-2 rounded">Next</button>
+                <button id="prev-btn" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold p-3 rounded-lg transition-all duration-300 shadow-md" disabled>Previous</button>
+                <span id="page-number" class="text-2xl font-semibold text-black"></span>
+                <button id="next-btn" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold p-3 rounded-lg transition-all duration-300 shadow-md">Next</button>
             </div>
 
             <!-- Pokemon Details -->
-            <div id="pokemon-details" class="hidden mt-10 p-5 bg-white rounded shadow-lg">
-                <h2 id="pokemon-name" class="text-2xl font-bold text-gray-800"></h2>
+            <div id="pokemon-details" class="hidden mt-10 p-8 bg-white rounded-lg shadow-2xl">
+                <h2 id="pokemon-name" class="text-3xl font-bold text-gray-800 text-center"></h2>
                 <img id="pokemon-image" src="" alt="" class="w-40 mx-auto my-5">
-                <p id="pokemon-info" class="text-gray-600"></p>
-                <button id="back-btn" class="bg-blue-500 text-white p-2 rounded mt-5">Back to List</button>
+                <div id="pokemon-info" class="text-gray-600 text-lg text-center">
+                    <!-- Dynamic Pokémon details will be injected here -->
+                </div>
+                <button id="back-btn" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold p-3 rounded-lg mt-5 transition-all duration-300 shadow-md w-full">Back to List</button>
             </div>
 
             <!-- Error Message -->
-            <p id="error-massage" class="text-red-500 text-center hidden">Failed to fetch Pokemon, Please try again</p>
+            <p id="error-message" class="text-red-500 text-center hidden">Failed to fetch Pokémon. Please try again.</p>
         </div>
         <script src="app.js"></script>
     </body>
